Bump version to 1.6.14 Fix memory issues (add 30G of Xmx by default) Add some logging to help troubleshooting issues in the deployed environment Split jobs into smaller chunks (otherwise they end up not being processed at all)