@@ -51,8 +51,13 @@ docker {
         baseImage = 'openjdk:11-jre'
         maintainer = 'Pawel Koperek "pkoperek@gmail.com""'
         ports = [25333]
-        tag = 'pkoperek/cloudsimplus-gateway:1.6.7'
+        tag = 'pkoperek/cloudsimplus-gateway:1.6.14'
+        jvmArgs = ['-Xms1G', '-Xmx30G']
     }
+}
+
+dockerCreateDockerfile {
+    environmentVariable 'JAVA_OPTS', '-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap'
 }
 
 mainClassName = "pl.edu.agh.csg.Main"
